# recorder-transcriber-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  config.yml  docker-compose.yml  main.py  pyproject.toml
devops/: .1070.pyproject.toml  Dockerfile  docker-compose.yml
recorder_transcriber/: api.py  config.py  configuration.py  di.py  model.py  response_models.py
recorder_transcriber/adapters/audio/: ffmpeg.py  openww.py  sddevice.py  silerovad.py  sounddevice.py
recorder_transcriber/adapters/speach_to_text/: whisper.py
recorder_transcriber/adapters/speech_to_text/: whisper.py
recorder_transcriber/adapters/text_to_text/: localllama.py  localllm.py
recorder_transcriber/api/: __init__.py  app.py  core.py  main_router.py  response_models.py  service_router.py
recorder_transcriber/core/: config.py  di.py  logger.py  settings.py
recorder_transcriber/domain/: models.py
recorder_transcriber/ports/: audiostream.py  storage.py  stt.py  ttt.py  vad.py  wakeword.py
recorder_transcriber/services/: enhancement.py  enhancer.py  listening.py  orchestrator.py  recorder.py  recording.py  transcriber.py  transcription.py
scripts/openww/: download_oww_model.py
