[project]
name = "recorder-transcriber-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.5",
    "pyyaml>=6.0.3",
    "sounddevice>=0.5.3",
    "openai-whisper>=20240930",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.7.0",
]
