[project]
name = "recorder-transcriber-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "numpy<2",
    "pyyaml>=6.0.3",
    "sounddevice>=0.5.3",
    "faster-whisper>=1.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.7.0",
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "mypy>=1.19.1",
    "pip>=25.3",
    "openwakeword>=0.6.0",
    "silero-vad>=6.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "pydantic-settings>=2.12.0",
]

[mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
